Add CRUD for content
